# prom_dashboard

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/LLM/: service.py  tools.py
backend/app/LLM/models/: glm.py
backend/app/api/: main.py
backend/app/api/route/: custom.py  health.py  llm.py  metric.py  terminal.py
backend/app/core/: config.py
backend/app/models/: metric.py
backend/app/query/: cpu.py  custom.py  disk.py  memory.py  network.py
backend/app/tool/: time.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js
frontend/src/app/dashboard/: page.jsx
frontend/src/app/terminal/: page.jsx
frontend/src/components/: app-sidebar.jsx  chart-example.jsx  custom-chart-card.jsx  nav-main.jsx  node-table-card.jsx  prom-ai-search.jsx  query-card.jsx  site-header.jsx  terminal-component.jsx
frontend/src/components/ui/: code-block.jsx  placeholders-and-vanish-input.jsx
frontend/src/lib/: utils.js
