[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "fastapi[standard]>=0.127.0",
    "httpx>=0.28.1",
    "sniffio>=1.3.1",
    "zai-sdk>=0.2.0",
    "websockets>=13.0",
    "paramiko>=3.4.0",
]
